<resources>
    <string name="app_name">Android Features Demo</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="btn_log_in">Login</string>
    <string name="passwordToggleContentDescription">Toggle password visibility</string>


    <string name="error_username">Invalid Username</string>
    <string name="error_email">Invalid Email</string>
    <string name="error_password">Invalid password</string>

    <string name="welcome_message">Welcome home sir!</string>
    <string name="error_message">Woops! Check your inputs.</string>



</resources>
